syntax = "proto3";

package post.v1;

import "google/protobuf/timestamp.proto";



message Post {
    string id = 1;
    string user_id = 2;
    string content = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

message CreatePostRequest {
    string user_id = 1; 
    string content = 2;
}

message CreatePostResponse {
    Post post = 1;
}



service PostService {
    rpc CreatePost (CreatePostRequest) returns (CreatePostResponse);
}